add CMake to expose EP_nocache_Psychrometrics, add github actions builds to test LINK_WITH_PYTHON=ON/OFF and USE_PSYCHROMETRICS_CACHING=ON/OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -344,6 +344,8 @@ if (BUILD_DOCS)
   add_subdirectory(doc)
 endif()
 
+option( USE_PSYCHROMETRICS_CACHING "Use pychrometrics cashing routines" ON )
+
 # some parameters are simply not needed for everyday building
 mark_as_advanced(CMAKE_INSTALL_PREFIX)
 mark_as_advanced(BUILD_SHARED_LIBS)
@@ -392,3 +394,4 @@ mark_as_advanced(BUILD_GMOCK)
 mark_as_advanced(BUILD_GTEST)
 mark_as_advanced(gmock_build_tests)
 mark_as_advanced(BUILD_WCE_TESTING)
+mark_as_advanced(USE_PSYCHROMETRICS_CACHING)
