--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -3,7 +3,7 @@ name: Mac Build
 on: [push]
 
 jobs:
-  mac_release_python_no_psychcach:
+  python_no_psychcach:
     runs-on: macos-10.15
 
     steps:
@@ -22,12 +22,12 @@ jobs:
       working-directory: ${{runner.workspace}}/EnergyPlus/build
       run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=ON -DUSE_PSYCHROMETRICS_CACHING=OFF ..
 
-    - name: Build Package
+    - name: Build EnergyPlus
       working-directory: ${{runner.workspace}}/EnergyPlus/build
       shell: bash
       run: cmake --build . --target energyplus -j 2
 
-  mac_release_no_python_psychcach:
+  no_python_psychcach:
     runs-on: macos-10.15
 
     steps:
@@ -46,12 +46,12 @@ jobs:
         working-directory: ${{runner.workspace}}/EnergyPlus/build
         run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=OFF -DUSE_PSYCHROMETRICS_CACHING=ON ..
 
-      - name: Build Package
+      - name: Build EnergyPlus
         working-directory: ${{runner.workspace}}/EnergyPlus/build
         shell: bash
         run: cmake --build . --target energyplus -j 2
 
-  mac_release_no_python_no_psychcach:
+  no_python_no_psychcach:
     runs-on: macos-10.15
 
     steps:
@@ -70,7 +70,7 @@ jobs:
         working-directory: ${{runner.workspace}}/EnergyPlus/build
         run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=OFF -DUSE_PSYCHROMETRICS_CACHING=OFF ..
 
-      - name: Build Package
+      - name: Build EnergyPlus
         working-directory: ${{runner.workspace}}/EnergyPlus/build
         shell: bash
-        run: cmake --build . --target enerygplus -j 2
+        run: cmake --build . --target energyplus -j 2
