Upgrade qtifw version to 4.0, 3.2.2 was dropped
cf https://github.com/miurahr/aqtinstall/pull/172

--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -85,11 +85,11 @@ jobs:
       run: |
         set -x
         out_dir="C:/Qt"
-        aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir="$out_dir"
-        echo "$out_dir/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
+        aqt tool windows tools_ifw 4.0 qt.tools.ifw.4.0 --outputdir="$out_dir"
+        echo "$out_dir/Tools/QtInstallerFramework/4.0/bin" >> $GITHUB_PATH
 
     - name: Create Build Directory
-      run: cmake -E make_directory ./build
+      run: cmake -E make_directory ./build/
 
     - name: Configure CMake
       working-directory: ./build
