--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build EnergyPlus
       working-directory: ${{runner.workspace}}/EnergyPlus/build
       shell: bash
-      run: cmake --build . --target energyplus -j 2
+      run: cmake --build . --target energyplus_tests -j 2
 
   no_python_psychcach:
     runs-on: macos-10.15
