--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build EnergyPlus
         working-directory: ${{runner.workspace}}/EnergyPlus/build
         shell: bash
-        run: cmake --build . --target energyplus -j 2
+        run: cmake --build . --target energyplus_tests -j 2
 
   no_python_no_psychcach:
     runs-on: macos-10.15
@@ -73,4 +73,4 @@ jobs:
       - name: Build EnergyPlus
         working-directory: ${{runner.workspace}}/EnergyPlus/build
         shell: bash
-        run: cmake --build . --target energyplus -j 2
+        run: cmake --build . --target energyplus_tests -j 2
