--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{runner.workspace}}/EnergyPlus/build
-      run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=ON -DUSE_PSYCHROMETRICS_CACHING=OFF ..
+      run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=ON -DUSE_PSYCHROMETRICS_CACHING=OFF -DBUILD_TESTING=ON ..
 
     - name: Build EnergyPlus
       working-directory: ${{runner.workspace}}/EnergyPlus/build
@@ -44,7 +44,7 @@ jobs:
       - name: Configure CMake
         shell: bash
         working-directory: ${{runner.workspace}}/EnergyPlus/build
-        run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=OFF -DUSE_PSYCHROMETRICS_CACHING=ON ..
+        run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=OFF -DUSE_PSYCHROMETRICS_CACHING=ON -DBUILD_TESTING=ON ..
 
       - name: Build EnergyPlus
         working-directory: ${{runner.workspace}}/EnergyPlus/build
@@ -68,7 +68,7 @@ jobs:
       - name: Configure CMake
         shell: bash
         working-directory: ${{runner.workspace}}/EnergyPlus/build
-        run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=OFF -DUSE_PSYCHROMETRICS_CACHING=OFF ..
+        run: cmake -DCMAKE_BUILD_TYPE=Release -DLINK_WITH_PYTHON=OFF -DUSE_PSYCHROMETRICS_CACHING=OFF -DBUILD_TESTING=ON ..
 
       - name: Build EnergyPlus
         working-directory: ${{runner.workspace}}/EnergyPlus/build
