--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ option( BUILD_PACKAGE "Build package" OFF )
 option( BUILD_TESTING "Build testing targets" OFF )
 option( BUILD_FORTRAN "Build Fortran stuff" OFF )
 option( USE_PSYCHROMETRICS_CACHING "Use pychrometrics cashing routines" ON )
+option( USE_GLYCOL_CACHING "Use glycol cashing routines" ON )
 
 #######################################################################
 
@@ -394,3 +395,4 @@ mark_as_advanced(BUILD_GTEST)
 mark_as_advanced(gmock_build_tests)
 mark_as_advanced(BUILD_WCE_TESTING)
 mark_as_advanced(USE_PSYCHROMETRICS_CACHING)
+mark_as_advanced(USE_GLYCOL_CACHING)
