--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ option( BUILD_TESTING "Build testing targets" OFF )
 option( BUILD_FORTRAN "Build Fortran stuff" OFF )
 option( USE_PSYCHROMETRICS_CACHING "Use pychrometrics cashing routines" ON )
 option( USE_GLYCOL_CACHING "Use glycol cashing routines" ON )
+option( USE_PSYCH_STATS "Compute psychrometric stats" OFF)
 
 #######################################################################
 
@@ -396,3 +397,4 @@ mark_as_advanced(gmock_build_tests)
 mark_as_advanced(BUILD_WCE_TESTING)
 mark_as_advanced(USE_PSYCHROMETRICS_CACHING)
 mark_as_advanced(USE_GLYCOL_CACHING)
+mark_as_advanced(USE_PSYCH_STATS)
