move EP_psych_errors to CMake options, add GH actions build, minor formating and warnings cleanup

--- a/src/EnergyPlus/CMakeLists.txt
+++ b/src/EnergyPlus/CMakeLists.txt
@@ -29,6 +29,10 @@ if(USE_PSYCH_STATS)
   add_definitions("-DEP_psych_stats")
 endif()
 
+if(USE_PSYCH_ERRORS)
+  add_definitions("-DEP_psych_errors")
+endif()
+
 SET( SRC
   "${PROJECT_SOURCE_DIR}/third_party/milo/dtoa.h"
   "${PROJECT_SOURCE_DIR}/third_party/milo/itoa.h"
