Make everything (almost) use std::filesystem, but do not use (yet) fs::path everywhere instead of std::string (and +)

--- a/src/EnergyPlus/CMakeLists.txt
+++ b/src/EnergyPlus/CMakeLists.txt
@@ -769,7 +769,11 @@ add_library( energyplusparser STATIC ${INPUTPARSING_SRC} )
 add_dependencies( energyplusparser GenerateEmbeddedEpJSONSchema )
 target_link_libraries( energyplusparser re2 fmt::fmt)
 if(UNIX AND NOT APPLE)
-  target_link_libraries( energyplusparser dl )
+  target_link_libraries( energyplusparser dl)
+  # See https://en.cppreference.com/w/cpp/filesystem#Notes
+  if (CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.1)
+    target_link_libraries( energyplusparser stdc++fs )
+  endif()
 endif()
 if (WIN32)
   target_link_libraries( energyplusparser Shlwapi )
@@ -791,6 +795,9 @@ if(UNIX AND NOT APPLE)
   target_link_libraries( energypluslib dl )
   if (CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 9.0)
     target_link_libraries( energypluslib util )
+  endif()
+  if (CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.1)
+    target_link_libraries( energypluslib stdc++fs )
   endif()
 endif()
 if (WIN32)
