Fix some include path settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,32 +202,32 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Products")
 include(cmake/ProjectMacros.cmake)
 include(cmake/CompilerFlags.cmake)
 
-include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories(${PROJECT_SOURCE_DIR}/third_party)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/btwxt/src)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/re2)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/doj)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/nlohmann)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/valijson)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/ObjexxFCL/src/)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/SQLite/ SYSTEM)
-include_directories("${PROJECT_SOURCE_DIR}/third_party/Expat" "${PROJECT_SOURCE_DIR}/third_party/Expat/lib" SYSTEM)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/CLI/)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/eigen/)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Chromogenics/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Common/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Gases/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/MultiLayerOptics/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/SingleLayerOptics/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/SpectralAveraging/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Tarcog/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Viewer/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/src)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/btwxt/src)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/re2)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/doj)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/nlohmann)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/valijson)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/ObjexxFCL/src/)
+target_include_directories(project_options SYSTEM INTERFACE ${PROJECT_SOURCE_DIR}/third_party/SQLite/)
+target_include_directories(project_options SYSTEM INTERFACE "${PROJECT_SOURCE_DIR}/third_party/Expat" "${PROJECT_SOURCE_DIR}/third_party/Expat/lib")
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/CLI/)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/eigen/)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Chromogenics/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Common/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Gases/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/MultiLayerOptics/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/SingleLayerOptics/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/SpectralAveraging/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Tarcog/include)
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Viewer/include)
 if(OPENGL_FOUND)
-  include_directories(${PROJECT_SOURCE_DIR}/third_party/penumbra/include)
+  target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/penumbra/include)
 endif()
-include_directories(${PROJECT_SOURCE_DIR}/third_party/kiva-ep/src)
-include_directories("${kiva_BINARY_DIR}/src/libkiva")
-include_directories( SYSTEM "${kiva_SOURCE_DIR}/vendor/boost-1.61.0/")
+target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/third_party/kiva-ep/src)
+target_include_directories(project_options INTERFACE "${kiva_BINARY_DIR}/src/libkiva")
+target_include_directories(project_options SYSTEM INTERFACE "${kiva_SOURCE_DIR}/vendor/boost-1.61.0/")
 
 
 
