Begin organization of Fortran CMake project modernization

--- a/src/Slab/CMakeLists.txt
+++ b/src/Slab/CMakeLists.txt
@@ -24,31 +24,34 @@ set(SRC
 
 set(STATIC_EXE FALSE)
 
+add_library(SlabOptions INTERFACE)
+
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(SlabOptions INTERFACE -static-intel)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(SlabOptions INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(SlabOptions INTERFACE -static)
     set(STATIC_EXE TRUE)
   endif()
 else()
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
+    target_compile_options(SlabOptions INTERFACE /libs:static)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(SlabOptions INTERFACE -static)
     set(STATIC_EXE TRUE)
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH TRUE)
 add_executable(Slab ${SRC})
+target_link_libraries(Slab PRIVATE SlabOptions)
 set_target_properties(Slab PROPERTIES FOLDER Auxiliary)
 
 set_target_properties(Slab PROPERTIES COMPILE_FLAGS "-ffree-line-length-200 ${SHARED_FLAGS}")
