--- a/src/Transition/CMakeLists.txt
+++ b/src/Transition/CMakeLists.txt
@@ -66,47 +66,51 @@ list(APPEND VERSIONS 9_2_0)
 list(APPEND VERSIONS 9_3_0)
 list(APPEND VERSIONS 9_4_0)
 
+add_library(TransitionOptions INTERFACE)
+
 if(APPLE)
   if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(TransitionOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-none")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fbounds-check")
+    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
+    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(TransitionOptions INTERFACE -fpp)
+    target_compile_options(TransitionOptions INTERFACE -static-intel)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(TransitionOptions INTERFACE -static)
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(TransitionOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-none")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fbounds-check")
+    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
+    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
     set(STATIC_EXE TRUE)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(TransitionOptions INTERFACE -fpp)
+    target_compile_options(TransitionOptions INTERFACE -static-intel)
   endif()
 else() # Windows
   set(STATIC_EXE TRUE)
   if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(TransitionOptions INTERFACE -static)
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(TransitionOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-none")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fbounds-check")
+    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
+    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
   else()
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /fpp")
+    target_compile_options(TransitionOptions INTERFACE /libs:static)
+    target_compile_options(TransitionOptions INTERFACE /fpp)
   endif()
 endif()
+
+target_compile_options(TransitionLib PUBLIC TransitionOptions)
 
 list(LENGTH VERSIONS VERSIONS_SIZE)
 
