--- a/src/CalcSoilSurfTemp/CMakeLists.txt
+++ b/src/CalcSoilSurfTemp/CMakeLists.txt
@@ -12,27 +12,29 @@ set(SRC EPWRead.f90 SoilSurfTemp.f90)
 
 set(STATIC_EXE FALSE)
 
+add_library(CalcSoilSurfTempOptions INTERFACE)
+
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -fpp)
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -static-intel)
   else()
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(CalcSoilSurfTempOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -ffree-line-length-200)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -fpp)
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -static-intel)
   else()
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(CalcSoilSurfTempOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -static)
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -ffree-line-length-200)
     set(STATIC_EXE TRUE)
   endif()
 else() # Windows
@@ -40,19 +42,20 @@ else() # Windows
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /fpp")
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE /libs:static)
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE /fpp)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -static)
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(CalcSoilSurfTempOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(CalcSoilSurfTempOptions INTERFACE -ffree-line-length-200)
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH TRUE)
 add_executable(CalcSoilSurfTemp ${SRC})
+target_link_libraries(CalcSoilSurfTemp PRIVATE CalcSoilSurfTempOptions)
 set_target_properties(CalcSoilSurfTemp PROPERTIES FOLDER Auxiliary)
 
 install(TARGETS CalcSoilSurfTemp DESTINATION PreProcess/CalcSoilSurfTemp)
