--- a/src/ExpandObjects/CMakeLists.txt
+++ b/src/ExpandObjects/CMakeLists.txt
@@ -16,27 +16,29 @@ set(SRC epfilter.f90)
 
 set(STATIC_EXE FALSE)
 
+add_library(ExpandObjectsOptions INTERFACE)
+
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(ExpandObjectsOptions INTERFACE -fpp)
+    target_compile_options(ExpandObjectsOptions INTERFACE -static-intel)
   else()
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(ExpandObjectsOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(ExpandObjectsOptions INTERFACE -ffree-line-length-200)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(ExpandObjectsOptions INTERFACE -fpp)
+    target_compile_options(ExpandObjectsOptions INTERFACE -static-intel)
   else()
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(ExpandObjectsOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(ExpandObjectsOptions INTERFACE -static)
+    target_compile_options(ExpandObjectsOptions INTERFACE -ffree-line-length-200)
     set(STATIC_EXE TRUE)
   endif()
 else() # Windows
@@ -44,14 +46,14 @@ else() # Windows
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /fpp")
+    target_compile_options(ExpandObjectsOptions INTERFACE /libs:static)
+    target_compile_options(ExpandObjectsOptions INTERFACE /fpp)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(ExpandObjectsOptions INTERFACE -static)
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
+      target_compile_options(ExpandObjectsOptions INTERFACE -cpp)
     endif()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(ExpandObjectsOptions INTERFACE -ffree-line-length-200)
   endif()
 endif()
 
@@ -62,6 +64,7 @@ else() # windows
   add_executable(ExpandObjects ${SRC} "${CMAKE_CURRENT_BINARY_DIR}/ExpandObjects.rc")
 endif()
 
+target_link_libraries(ExpandObjects ExpandObjectsOptions)
 set_target_properties(ExpandObjects PROPERTIES FOLDER Auxiliary)
 
 install(TARGETS ExpandObjects DESTINATION "./")
