--- a/src/HVAC-Diagram/CMakeLists.txt
+++ b/src/HVAC-Diagram/CMakeLists.txt
@@ -12,38 +12,41 @@ set(SRC HVAC-Diagram-Main.f90)
 
 set(STATIC_EXE TRUE)
 
+add_library(HVAC-Diagram-Options INTERFACE)
+
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(HVAC-Diagram-Options INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=legacy")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(HVAC-Diagram-Options INTERFACE -std=legacy)
+    target_compile_options(HVAC-Diagram-Options INTERFACE -ffree-line-length-200)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(HVAC-Diagram-Options INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=legacy")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(HVAC-Diagram-Options INTERFACE -static)
+    target_compile_options(HVAC-Diagram-Options INTERFACE -std=legacy)
+    target_compile_options(HVAC-Diagram-Options INTERFACE -ffree-line-length-200)
     set(STATIC_EXE TRUE)
   endif()
 else()
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
+    target_compile_options(HVAC-Diagram-Options INTERFACE /libs:static)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=legacy")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
+    target_compile_options(HVAC-Diagram-Options INTERFACE -static)
+    target_compile_options(HVAC-Diagram-Options INTERFACE -std=legacy)
+    target_compile_options(HVAC-Diagram-Options INTERFACE -ffree-line-length-200)
     set(STATIC_EXE TRUE)
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH true)
 add_executable(HVAC-Diagram ${SRC})
+target_link_libraries(HVAC-Diagram PRIVATE HVAC-Diagram-Options)
 set_target_properties(HVAC-Diagram PROPERTIES FOLDER Auxiliary)
 
 install(TARGETS HVAC-Diagram DESTINATION PostProcess)
