Start to modernize Fortran CMake

--- a/src/ConvertESOMTR/CMakeLists.txt
+++ b/src/ConvertESOMTR/CMakeLists.txt
@@ -15,17 +15,18 @@ set(STATIC_EXE FALSE)
 set(SKIP_BUILD_RPATH TRUE)
 add_executable(convertESOMTR ${SRC})
 set_target_properties(convertESOMTR PROPERTIES FOLDER Auxiliary)
+add_library(convertESOMTROptions INTERFACE)
 
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(convertESOMTROptions INTERFACE -static-intel)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(convertESOMTROptions INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(convertESOMTROptions INTERFACE -static)
     set(STATIC_EXE TRUE)
   endif()
 else()
@@ -33,11 +34,13 @@ else()
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
+    target_compile_options(convertESOMTROptions INTERFACE /libs:static)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(convertESOMTROptions INTERFACE -static)
   endif()
 endif()
+target_link_libraries(convertESOMTR PRIVATE convertESOMTROptions)
+
 
 install(TARGETS convertESOMTR DESTINATION "PostProcess/convertESOMTRpgm/")
 if(NOT ${STATIC_EXE})
