--- a/src/Basement/CMakeLists.txt
+++ b/src/Basement/CMakeLists.txt
@@ -21,19 +21,20 @@ set(SRC
 
 set(STATIC_EXE FALSE)
 
+add_library(BasementOptions INTERFACE)
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(BasementOptions INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffloat-store")
+    target_compile_options(BasementOptions INTERFACE -ffloat-store)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(BasementOptions INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffloat-store")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(BasementOptions INTERFACE -ffloat-store)
+    target_compile_options(BasementOptions INTERFACE -static)
     set(STATIC_EXE TRUE)
   endif()
 else() # Windows
@@ -41,24 +42,47 @@ else() # Windows
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS
-        "/nologo /debug:minimal /O2 /Oy- /assume:buffered_io /noaltparam /fpscomp:nolibs /fpe:0 /fp:fast=2  /traceback /check:uninit /libs:static /threads /c /assume:protect-parens /Qprec-div /Qprec-sqrt /Qimf-precision:high /Qimf-arch-consistency:true /Qvec-"
-    )
+    target_compile_options(
+      BasementOptions
+      INTERFACE /nologo
+                /debug:minimal
+                /O2
+                /Oy-
+                /assume:buffered_io
+                /noaltparam
+                /fpscomp:nolibs
+                /fpe:0
+                /fp:fast=2
+                /traceback
+                /check:uninit
+                /libs:static
+                /threads
+                /c
+                /assume:protect-parens
+                /Qprec-div
+                /Qprec-sqrt
+                /Qimf-precision:high
+                /Qimf-arch-consistency:true
+                /Qvec-)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffloat-store")
+    target_compile_options(BasementOptions INTERFACE -static)
+    target_compile_options(BasementOptions INTERFACE -ffloat-store)
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH TRUE)
 add_executable(Basement ${SRC})
 
-set_target_properties(Basement PROPERTIES COMPILE_FLAGS "-O1 -ffree-line-length-200 ${SHARED_FLAGS}")
+set_target_properties(
+  Basement PROPERTIES COMPILE_FLAGS
+                      "-O1 -ffree-line-length-200")
 set_target_properties(Basement PROPERTIES FOLDER Auxiliary)
+target_link_libraries(Basement PRIVATE BasementOptions)
 
 install(TARGETS Basement DESTINATION PreProcess/GrndTempCalc)
 if(NOT ${STATIC_EXE})
   include("${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/ProjectMacros.cmake")
   install_target_prereqs(Basement PreProcess/GrndTempCalc)
 endif()
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/../../idd/BasementGHT.idd" DESTINATION "PreProcess/GrndTempCalc/")
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/../../idd/BasementGHT.idd"
+        DESTINATION "PreProcess/GrndTempCalc/")
