--- a/src/ParametricPreprocessor/CMakeLists.txt
+++ b/src/ParametricPreprocessor/CMakeLists.txt
@@ -10,18 +10,20 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 
 set(SRC ParametricPreprocessor.f90)
 
+add_library(ParametricPreprocessorOptions INTERFACE)
+
 set(STATIC_EXE FALSE)
 
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(ParametricPreprocessorOptions INTERFACE -static-intel)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(ParametricPreprocessorOptions INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(ParametricPreprocessorOptions INTERFACE -static)
     set(STATIC_EXE TRUE)
   endif()
 else()
@@ -29,17 +31,19 @@ else()
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
+    target_compile_options(ParametricPreprocessorOptions INTERFACE /libs:static)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(ParametricPreprocessorOptions INTERFACE -static)
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH true)
 add_executable(ParametricPreprocessor ${SRC})
+target_link_libraries(ParametricPreprocessor PRIVATE ParametricPreprocessorOptions)
 set_target_properties(ParametricPreprocessor PROPERTIES FOLDER Auxiliary)
 
-set_target_properties(ParametricPreprocessor PROPERTIES COMPILE_FLAGS "-ffree-line-length-200 ${SHARED_FLAGS}")
+set_target_properties(ParametricPreprocessor PROPERTIES COMPILE_FLAGS -ffree-line-length-200)
+
 
 install(TARGETS ParametricPreprocessor DESTINATION PreProcess/ParametricPreprocessor)
 if(NOT ${STATIC_EXE})
