--- a/src/ReadVars/CMakeLists.txt
+++ b/src/ReadVars/CMakeLists.txt
@@ -12,16 +12,19 @@ set(SRC ReadVarsESO.f90)
 
 set(STATIC_EXE FALSE)
 
+add_library(ReadVarsOptions INTERFACE)
+
+
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(ReadVarsOptions INTERFACE -static-intel)
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
+    target_compile_options(ReadVarsOptions INTERFACE -static-intel)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(ReadVarsOptions INTERFACE -static)
     set(STATIC_EXE TRUE)
   endif()
 else()
@@ -29,15 +32,16 @@ else()
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
+    target_compile_options(ReadVarsOptions INTERFACE /libs:static)
   else()
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    target_compile_options(ReadVarsOptions INTERFACE -static)
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH true)
 add_executable(ReadVarsESO ${SRC})
 set_target_properties(ReadVarsESO PROPERTIES FOLDER Auxiliary)
+target_link_libraries(ReadVarsESO PRIVATE ReadVarsOptions)
 
 install(TARGETS ReadVarsESO DESTINATION PostProcess)
 if(NOT ${STATIC_EXE})
