Reorganize Fortran CMake settings

--- a/src/Transition/CMakeLists.txt
+++ b/src/Transition/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 
-set(STATIC_EXE FALSE)
+set(CMAKE_SKIP_RPATH ${FORTRAN_SKIP_RPATH})
 
 # first create a static library of shared stuff
 set(LIB_SRC
@@ -66,51 +66,8 @@ list(APPEND VERSIONS 9_2_0)
 list(APPEND VERSIONS 9_3_0)
 list(APPEND VERSIONS 9_4_0)
 
-add_library(TransitionOptions INTERFACE)
-
-if(APPLE)
-  if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
-    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      target_compile_options(TransitionOptions INTERFACE -cpp)
-    endif()
-    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
-    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
-  else()
-    target_compile_options(TransitionOptions INTERFACE -fpp)
-    target_compile_options(TransitionOptions INTERFACE -static-intel)
-  endif()
-elseif(UNIX)
-  set(CMAKE_SKIP_RPATH TRUE)
-  if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
-    target_compile_options(TransitionOptions INTERFACE -static)
-    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      target_compile_options(TransitionOptions INTERFACE -cpp)
-    endif()
-    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
-    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
-    set(STATIC_EXE TRUE)
-  else()
-    target_compile_options(TransitionOptions INTERFACE -fpp)
-    target_compile_options(TransitionOptions INTERFACE -static-intel)
-  endif()
-else() # Windows
-  set(STATIC_EXE TRUE)
-  if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
-    target_compile_options(TransitionOptions INTERFACE -static)
-    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      target_compile_options(TransitionOptions INTERFACE -cpp)
-    endif()
-    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
-    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
-  else()
-    # Set release flags to be empty
-    set(CMAKE_Fortran_FLAGS_RELEASE "")
-    target_compile_options(TransitionOptions INTERFACE /libs:static)
-    target_compile_options(TransitionOptions INTERFACE /fpp)
-  endif()
-endif()
-
-target_link_libraries(TransitionLib PRIVATE TransitionOptions)
+target_compile_options(TransitionLib PUBLIC -fbounds-check)
+target_link_libraries(TransitionLib PUBLIC fortran_project_options)
 
 list(LENGTH VERSIONS VERSIONS_SIZE)
 
@@ -136,11 +93,11 @@ foreach(i RANGE 1 ${end})
   set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${LAST_NAME})
   add_executable("${LAST_NAME}" ${SRC})
   set_target_properties("${LAST_NAME}" PROPERTIES FOLDER Auxiliary)
-  target_link_libraries("${LAST_NAME}" PRIVATE TransitionLib TransitionOptions)
+  target_link_libraries("${LAST_NAME}" PRIVATE TransitionLib)
 
   if("${i}" GREATER "22")
     install(TARGETS "${LAST_NAME}" DESTINATION PreProcess/IDFVersionUpdater)
-    if(NOT ${STATIC_EXE})
+    if(NOT ${FORTRAN_STATIC_EXE})
       install_target_prereqs("${LAST_NAME}" PreProcess/IDFVersionUpdater)
     endif()
   endif()
