--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,6 +295,8 @@ add_subdirectory(src/ConvertInputFormat)
 
 if(BUILD_FORTRAN)
   include(CMakeAddFortranSubdirectory)
+  include(cmake/Fortran.cmake)
+
   cmake_add_fortran_subdirectory(
     src/ExpandObjects
     PROJECT ExpandObjects
